objects/Mulesoft_Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mulesoft_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mulesoft Application</label>
        <referenceTo>Mulesoft_Application__c</referenceTo>
        <relationshipLabel>Mulesoft Deployments</relationshipLabel>
        <relationshipName>Mulesoft_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Mulesoft Deployments</relationshipLabel>
        <relationshipName>Mulesoft_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mulesoft Deployment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mulesoft Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mulesoft Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>